# tinytac

./: .gitignore  COPYING.md  ChangeLog.md  Makefile.am  NEWS.md  README.md  TODO.md  acinclude.m4  autogen.sh  configure.ac
build-aux/: git-tar-name.txt
examples/: md5-example.c  tacacs-example.c
include/: tinytac.h  tinytac_compat.h  tinytac_plus.h
lib/libtinytac/: lconf.c  lconf.h  ldebug.c  ldebug.h  lerror.c  lerror.h  libtinytac.h  libtinytac.sym  lmemory.c  lmemory.h  lnetwork.c  lnetwork.h  lproto.c  lproto.h
m4/: .gitignore
src/ttu/: tinytacutil.c  tinytacutil.h  widget-acct.c  widget-authen.c  widget-author.c  widget-config.c
